--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Library</title>
 </head>
 <body>
-    <preloaderlib ></preloaderlib>
+
+    <preloaderlib s-name=""></preloaderlib>
+
     <script src="library/js/index.js"></script>
 </body>
 </html>
