--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <preloaderlib s-name="dark"></preloaderlib>
+    <preloaderlib></preloaderlib>
 
     <script src="library/js/index.js"></script>
 </body>
