--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 
-    <preloaderlib></preloaderlib>
+    <preloaderlib pbg="#53cf74" s-name="ice-cream">
 
+    </preloaderlib>
     <script src="library/js/index.js"></script>
+
 </body>
 </html>
