--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <preloaderlib pbg="#53cf74" s-name="ice-cream">
+    <preloaderlib pbg="your-hex" s-name="animation-name">
 
     </preloaderlib>
     <script src="library/js/index.js"></script>
