--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="library/css/index.css">
-    <title>Library</title>
+    <link rel="stylesheet" href="preloader-module/css/index.css">
+    <title>Omnis</title>
 </head>
 <body>
 
