--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <preloaderlib pbg="your-hex" s-name="animation-name">
 
     </preloaderlib>
-    <script src="library/js/index.js"></script>
+    <script src="preloader-module/js/index.js"></script>
 
 </body>
 </html>
