--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="preloader-module/css/index.css">
+    <link rel="stylesheet" href="Omnis/preloader-module/css/index.css">
     <title>Omnis</title>
 </head>
 <body>
 
-    <preloaderlib pbg="your-hex" s-name="animation-name">
-
-    </preloaderlib>
-    <script src="library/js/index.js"></script>
+    <preloaderlib pbg="your backgound" s-name="type animation" s-color="animation-color"></preloaderlib>
+    <script src="Omnis/preloader-module/js/index.js"></script>
 
 </body>
 </html>
