--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru" translate="no">
 <head>
+    <script type="module" src="Omnis/index.js"></script>
+    <!-- <preloaderlib pbg="#eb4034" s-name="parrot" s-color="##eb4034" s-parrot="#00ff00"></preloaderlib> -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Omnis/preloader-module/css/index.css">
+    <link rel="stylesheet" href="Omnis/button-module/css/button.css">
     <title>Omnis</title>
 </head>
 <body>
-
-    <preloaderlib pbg="your-hexour-hex" s-name="animation-name" s-color="animation-color"></preloaderlib>
-    <script src="Omnis/preloader-module/js/index.js"></script>
-
+    <s-button br-radius="" bg-color="#000" txt-color="" btn-style=""></s-button>
+    <!-- <preloaderlib pbg="#000" s-name="animation-name" s-color="animation-color"></preloaderlib> -->
+    <!-- <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script> -->
 </body>
 </html>
